# mamamia

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md  default_config.json  report.html  suite.py
examples/: consumer.py  producer.py
mamamia/client/: consumer.py  producer.py  transport.py
mamamia/core/: README.md  interfaces.py  models.py  protocol.py
mamamia/server/: README.md  api.py  orchestrator.py  registry.py  run.py  tcp.py
mamamia/server/lease/: in_memory.py
mamamia/server/state/: in_memory.py
mamamia/server/storage/: in_memory.py
tests/: simulation.py
